# QTC

./: .gitmodules  CMakeLists.txt  Docker  README.md
.github/workflows/: ci.yml
include/blockchain/: Block.h  Blockchain.h  Transaction.h
include/config/: Constants.h
include/network/: Node.h
include/rpc/: RpcServer.h
include/wallet/: Wallet.h
include/zk/: Zk.h
src/: main.cpp
src/blockchain/: Block.cpp  Blockchain.cpp  Transaction.cpp
src/network/: Node.cpp
src/rpc/: RpcServer.cpp
src/wallet/: Wallet.cpp
src/zk/: Zk.cpp
